<resources>
    <string name="app_name" translatable="false">CyParking</string>
    <string name="action_settings">Settings</string>
    <string name="action_sign_out">Sign Out</string>
    <string name="menu_home">Home</string>
    <string name="menu_bookings">Bookings</string>
    <string name="menu_account">My Account</string>
    <string name="menu_feedback">Feedback</string>
    <string name="email">Email</string>
    <string name="name_surname">Name &amp; Surname</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome! "</string>
    <string name="invalid_email">Not a valid email</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be > 5 characters</string>
    <string name="invalid_name">This field must not be left empty</string>
    <string name="login_failed">Login failed</string>
    <string name="sign_up">Sign up</string>
    <string name="cancel">Cancel</string>
    <string name="op_desc">An operator is responsible for managing his/her own parking area such as: </string>
    <string name="op_item1">Offer parking slots to other users</string>
    <string name="op_item2">Handle payments</string>
    <string name="op_item3">Provide real-time data about the parking lot</string>
    <string name="operator">Operator</string>
    <string name="password_helper">You should also include special characters (!, @, %, etc.) to make it difficult to be guessed</string>
    <string name="forgot_password"><u>Forgot password?</u></string>
    <string name="password_reset_link_sent">A reset password link has been sent to the given email.</string>
    <string name="password_reset_link_failed">Failed to send a reset password link to the given email.</string>
    <string name="dial_intro">Privileges</string>
    <string name="dismiss">Dismiss</string>
    <string name="name">Name</string>
    <string name="email_low">email</string>
    <string name="email_hint">Enter email here…</string>
    <string name="give_feedback">Give Feedback</string>
    <string name="required">Required</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="diagnostic_info_disclaimer">In order to understand your feedback, we may receive diagnostic information from your device. While we cannot reply to feedback, all comments are taken into consideration.</string>
    <string name="unavailable">Unavailable</string>
    <string name="invalid_feedback">Cannot be empty</string>
    <string name="feedback_success">Feedback has been sent to the CyParking Team.</string>
    <string name="feedback_failed">Feedback failed to be sent to the CyParking Team. Please try again later.</string>
    <string name="feedback_disclaimer">Your feedback is important and helps improve our products. While we cannot reply to all feedback, all comments are taken into consideration.</string>
    <string name="get_location_with_gps">Using GPS to get location.</string>
    <string name="item_removed">Item removed!</string>
    <string name="item_added">Item added!</string>
    <string name="photo_not_picked">A photo was not picked.</string>
    <string name="register_lot_label">Lot details</string>
    <string name="hint_mobile_number">Mobile number</string>
    <string name="hint_capacity">Capacity</string>
    <string name="hint_parking_lot_name">Lot name</string>
    <string name="lot_name">Lot Name: %1$s</string>
    <string name="parking_lot_info">Parking Lot Info</string>
    <string name="mobile_phone">Mobile phone: </string>
    <string name="basic_info">Basic Info</string>
    <string name="capacity">Capacity: </string>
    <string name="get_location_text">Or input latitude and longitude below</string>
    <string name="get_location">Get location</string>
    <string name="hint_longitude">Longitude</string>
    <string name="longitude">Longitude:</string>
    <string name="hint_latitude">Latitude</string>
    <string name="latitude">Latitude:</string>
    <string name="location">Location:</string>
    <string name="duration">Duration</string>
    <string name="price">Price</string>
    <string name="add">Add</string>
    <string name="pricing">Pricing</string>
    <string name="price_eur">Price(eur)</string>
    <string name="duration_hours">Duration(hours)</string>
    <string name="done">Done</string>
    <string name="disclaimer">Disclaimer:</string>
    <string name="charges_disclaimer">Around 1.5% of all the credit card transaction fees will be contributed towards the CyParking Application.</string>
    <string name="register_parking_lot">Register Parking Lot</string>
    <string name="success_lot_registration">Lot registered successfully!</string>
    <string name="mobile_phone_error">Not a valid phone number!</string>
    <string name="lot_capacity_error">The capacity must not be empty!</string>
    <string name="lot_name_error">Not a valid name!</string>
    <string name="lot_lat_lng_error">Invalid coordinates!</string>
    <string name="lot_slot_offer_error">There must be at least 1 Slot Offer.</string>
    <string name="add_at_least_one_slot_offer">Add at least one Slot Offer</string>
    <string name="error_retrieving_location">Your location could not be processed! Check your GPS settings!</string>
    <string name="error_lot_registration">Oops! Something went wrong! Please check your details and try again.</string>
    <string name="error_lot_already_exists">The Parking Lot already exists!</string>
    <string name="parking_map">Parking Map</string>
    <string name="parking_map_label">Nearby Parking Lots</string>
    <string name="upcoming_booking">Upcoming booking</string>
    <string name="cancelled">Cancelled</string>
    <string name="invalid_qr_code">The given QR Code has wrong format. Please use the provided QR Code scanner for this application exclusively.</string>
    <string name="booking_completed">Booking has been completed!</string>
    <string name="my_parking_lot">My Parking Lot</string>
    <string name="operator_label">Parking Operator</string>
    <string name="slot_offers_label">My Slot Offers</string>
    <string name="shared_booking_card_view" translatable="false">bookingCardView</string>
    <string name="shared_parent" translatable="false">sharedParent</string>
    <string name="increment_by_one">Increment by one</string>
    <string name="decrement_by_one">Decrement by one</string>
    <string name="no_parking_lots_text">No parking lot was registered yet</string>
    <string name="volley_error_title">No Internet connection</string>
    <string name="volley_error_body">Make sure that Wi-Fi or mobile data is turned on, then try again.</string>
    <string name="no_nearby_parking_lots">No nearby parking lots were found.</string>
    <string name="swipe_left_to_use_options">Swipe left to use options</string>
    <string name="booking_label">Booking details</string>
    <string name="please_choose_an_offer">Please choose an offer</string>
    <string name="selected_offer">Selected offer: </string>
    <string name="slot_already_booked">You have already booked this lot.</string>
    <string name="parse_error_msg">Oops something went wrong. Please restart the application.</string>
    <string name="date_error_msg">Please choose an appropriate date.</string>
    <string name="no_payment_method_selected">Please choose a payment method.</string>
    <string name="no_space_msg">Unfortunately, the lot is out of available spaces. Please try again later.</string>
    <string name="no_lot_found_title">Couldn\'t load the parking lot\'s info</string>
    <string name="no_index_slot_offer">There was an error whilst analysing the selected Slot offer. Please choose another one and try again.</string>
    <string name="navigate_back_msg">You will now be navigated back to the map.</string>
    <string name="invalid_time">Please pick an appropriate time</string>
    <string name="log_in">Log In</string>
    <string name="go_back">Back</string>
    <string name="logout_of_auth_required_screen">Log in required</string>
    <string name="logout_book_parking_screen_msg">Booking a parking slot requires authentication. \nPlease login and try again!</string>
    <string name="logout_view_bookings_screen_msg">Viewing bookings requires authentication. \nPlease login and try again!</string>
    <string name="logout_register_lot_screen_msg">Registering a parking lot requires authentication. \nPlease login and try again!</string>
    <string name="logout_bookings_details_screen_msg">Viewing bookings details requires authentication. \nPlease login and try again!</string>
    <string name="unexpected_error_title">An unexpected error occurred</string>
    <string name="unexpected_error_info">Diagnostic information from your device was sent to the development team to be processed to avoid future failures.</string>
    <string name="booking_success">Parking has been booked successfully!</string>
    <string name="undo">UNDO</string>
    <string name="no_pending_bookings">No pending bookings at the moment!</string>
    <string name="update_field_not_same_as_previous">Must not be the same as the previous one.</string>
    <string name="prompt_name">Display name</string>
    <string name="action_update">Update</string>
    <string name="update_name">Update Name</string>
    <string name="update_email">Update Email</string>
    <string name="update_password">Update Password</string>
    <string name="update_name_text">Enter new name below:</string>
    <string name="update_email_text">Enter new email below:</string>
    <string name="update_password_text">Enter new password below:</string>
    <string name="not_logged_in_account_1">At the moment you are not logged in. Log in to your account or create a new account.</string>
    <string name="not_logged_in_account_2">At the moment you are not logged in. Please log in and try again.</string>
    <string name="click_here">Click here</string>
    <string name="updating_name">Updating name</string>
    <string name="updating_email">Updating email</string>
    <string name="updating_password">Updating password</string>
    <string name="invalid_user_exception_msg">It looks like you signed out of your app. You should sign in again and re-perform this action.</string>
    <string name="login_required_exception">This operation is sensitive and requires recent
        authentication. Log in again before retrying this request.</string>
    <string name="directions">directions</string>
    <string name="book">Book</string>
    <string name="sign_up_arg" translatable="false">sign_up</string>
    <string name="email_arg" translatable="false">email</string>
    <string name="selected_booking_arg" translatable="false">selected_booking</string>
    <string name="selected_lot_arg" translatable="false">selected_lot</string>
    <string name="user_latlng_arg" translatable="false">user_latlng</string>
    <string name="any_error" translatable="false">Error</string>
    <string name="no_connection">No connection</string>
    <string name="operator_question">Would you like to be an operator?</string>
    <string name="view_description">View Description</string>
    <string name="scan_a_lot">Scan a parking lot</string>
    <string name="scan_a_booking">Scan a booking</string>
    <string name="view_qr_code">View QR Code</string>
    <string name="fill_in_details">Fill In Details</string>
    <string name="pick_a_photo">pick a photo</string>
    <string name="please_pick_a_photo">Please pick a photo</string>
    <string name="selected_photo">Selected Photo</string>
    <string name="parking_lot_photo">Parking Lot Photo</string>
    <string name="no_google_maps_app_found">No apps installed that support this kind of action.</string>
    <string name="error">error</string>
</resources>