<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/slot_offer_item_header_fragment_cl_list"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="20dp">

    <TextView
        android:id="@+id/slot_offer_item_header_fragment_txt_lot_pricing"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pricing"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/slot_offer_item_header_fragment_txt_lot_pricing">

        <TextView
            android:id="@+id/slot_offer_item_header_fragment_txt_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/duration_hours"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/slot_offer_item_header_fragment_s_duration"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:hint="@string/duration"
            app:layout_constraintBottom_toTopOf="@+id/slot_offer_item_header_fragment_btn_add"
            app:layout_constraintEnd_toEndOf="@+id/slot_offer_item_header_fragment_txt_duration"
            app:layout_constraintStart_toStartOf="@+id/slot_offer_item_header_fragment_btn_add"
            app:layout_constraintTop_toBottomOf="@+id/slot_offer_item_header_fragment_txt_duration">

            <AutoCompleteTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/slot_offer_item_header_fragment_txt_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price_eur"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/slot_offer_item_header_fragment_txt_duration"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/slot_offer_item_header_fragment_s_price"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:hint="@string/price"
            app:layout_constraintBottom_toTopOf="@+id/slot_offer_item_header_fragment_btn_add"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/slot_offer_item_header_fragment_txt_price"
            app:layout_constraintTop_toBottomOf="@+id/slot_offer_item_header_fragment_txt_price">

            <AutoCompleteTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/slot_offer_item_header_fragment_btn_add"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/add"
            android:textSize="20sp"
            android:enabled="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/slot_offer_item_header_fragment_txt_slot_offer_warning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:text="@string/add_at_least_one_slot_offer"
        android:textColor="@color/red"
        android:textSize="20sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>
