<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.views.operator.OperatorFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/fragment_operator_btn_scan_booking"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scan_a_booking"
            android:visibility="gone"
            app:icon="@drawable/ic_qr_code_scanner"
            app:layout_constraintBottom_toTopOf="@+id/fragment_operator_cv_lot_info"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/fragment_operator_cv_lot_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:visibility="gone"
            app:cardCornerRadius="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/fragment_operator_cl_show_lot_info"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp"
                android:visibility="gone">

                <TextView
                    android:id="@+id/fragment_operator_txt_lot_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="Lot name: name..."
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/fragment_operator_txt_lot_capacity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="Availability: 20/40"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="@+id/fragment_operator_txt_lot_name"
                    app:layout_constraintStart_toStartOf="@+id/fragment_operator_txt_lot_name"
                    app:layout_constraintTop_toBottomOf="@+id/fragment_operator_txt_lot_name" />

                <Button
                    android:id="@+id/fragment_operator_btn_increment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/increment_by_one"
                    app:icon="@drawable/ic_add_to_lot"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/fragment_operator_txt_lot_capacity" />

                <Button
                    android:id="@+id/fragment_operator_btn_decrement"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/decrement_by_one"
                    app:icon="@drawable/ic_remove_from_lot"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/fragment_operator_btn_increment" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/fragment_operator_cl_register_lot_info"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp"
                android:visibility="gone">

                <TextView
                    android:id="@+id/fragment_operator_txt_lot_message"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:gravity="center"
                    android:text="@string/no_parking_lots_text"
                    android:textColor="@color/red"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@+id/fragment_operator_mbtn_register_parking_lot"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/fragment_operator_mbtn_register_parking_lot"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/register_parking_lot"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/fragment_operator_btn_to_slot_offers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/slot_offers_label"
            app:icon="@drawable/ic_offer"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/fragment_operator_btn_scan_booking"
            app:layout_constraintStart_toStartOf="@+id/fragment_operator_btn_scan_booking"
            app:layout_constraintTop_toBottomOf="@+id/fragment_operator_cv_lot_info" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>