<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:background="@color/purple_500"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/linearLayout2"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerInParent="true"
            android:background="@drawable/ic_error"
            android:contentDescription="@string/error" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout">

        <TextView
            android:id="@+id/dialog_fragment_alert_app_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="2"
            android:text="@string/volley_error_title"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5" />

        <TextView
            android:id="@+id/dialog_fragment_alert_app_body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:maxLines="5"
            android:text="@string/volley_error_body"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />

        <LinearLayout
            android:id="@+id/dual_action_layout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:orientation="horizontal"
            android:visibility="visible">

            <Button
                android:id="@+id/buttonNegative"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
                android:maxLines="1"
                android:text="Nasdasddaso"
                android:textColor="@color/purple_500"
                app:strokeColor="@color/purple_500"
                app:strokeWidth="2dp" />

            <Button
                android:id="@+id/buttonPositive"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="10dp"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
                android:layout_weight="1"
                android:maxLines="1"
                android:text="Yes"
                android:textColor="@color/purple_500"
                app:strokeColor="@color/purple_500"
                app:strokeWidth="2dp" />

        </LinearLayout>

        <Button
            android:id="@+id/buttonOk"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:paddingStart="50dp"
            android:paddingEnd="50dp"
            android:text="Ok"
            android:textColor="@color/purple_500"
            android:visibility="gone"
            app:strokeColor="@color/purple_500"
            app:strokeWidth="2dp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>